# g_ci_spm_parallel

./: .gitignore  README.md  equiv_test.m  es_ci_spm_parallel.m  pyproject.toml  setup.cfg
examples/: example1.py
src/brain_toaster/: __init__.py  core.py  parallel.py  utils.py
