[metadata]
name = brain_toaster
version = 0.1.0
author = Çağatay Gürsoy,
author_email = cagatay.guersoy@zi-mannheim.de,
description = Python port of g_ci_spm by Gerchen, Kirsch & Feld 2021,
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/brain_toaster
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20
    nibabel>=3.0
    scipy>=1.7
    joblib>=1.0

[options.packages.find]
where = src